<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.david.asteroides.MainActivity">

        <TextView
            android:id="@+id/title"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingTop="@dimen/margenTexto"
            android:paddingBottom="@dimen/margenTexto"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/botonJugar"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/botonJugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jugar"
            android:layout_marginStart="@dimen/margenBotones"
            android:layout_marginEnd="@dimen/margenBotones"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/botonConfiguracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracion"
            android:layout_marginStart="@dimen/margenBotones"
            android:layout_marginEnd="@dimen/margenBotones"
            app:layout_constraintTop_toBottomOf="@+id/botonJugar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/botonAcercaDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acercaDe"
            android:layout_marginStart="@dimen/margenBotones"
            android:layout_marginEnd="@dimen/margenBotones"
            app:layout_constraintTop_toBottomOf="@+id/botonConfiguracion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/botonSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:layout_marginStart="@dimen/margenBotones"
            android:layout_marginEnd="@dimen/margenBotones"
            app:layout_constraintTop_toBottomOf="@+id/botonAcercaDe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
